# dos-calc

./: .gitignore  CMakeLists.txt  README.md  compile-enzo.sh  compile-lcluster.sh  compile.sh  dos-calc-fft.c  dos-calc-velocity-decomposition.c  dos-calc-wrapper.c  dos-calc.c  fft.c  install.sh  linear-algebra.c  makefile  velocity-decomposition.c
cmake/: FindCBLAS.cmake  FindFFTW.cmake  FindLAPACKE.cmake
include/: structs.h
prepare-script/: prepare-dos-calc.py
python-scripts/: show-doses.py
scripts/: show-dos.py  show-doses.py
src/: dos-calc.c  fft.c  linear-algebra.c  makefile  parse-dosparams.c  read-trajectory.c  trajectory-functions.c  velocity-decomposition.c  verbPrintf.c  write-dos.c
